edited theme, fixed a bunch of light/dark mode issues

--- a/styles/components.scss
+++ b/styles/components.scss
@@ -79,13 +79,11 @@
 
 // cta link
 .cta-link {
-  img {
-    transition: margin 0.3s ease;
-  }
+  color: var(--primary-color);
+  transition: color 0.3s ease;
+
   &:hover {
-    img {
-      @apply ml-2;
-    }
+    color: #DADADA; // Define your desired hover color here
   }
 }
 
@@ -269,4 +267,16 @@
     max-width: none;
     flex-grow: 1;
   }
+}
+
+.light .text-contrast {
+  color: #000000; // Light mode color
+}
+
+.dark .text-contrast {
+  color: #DADADA; // Dark mode color
+}
+
+.dark .text-contrast:hover {
+  color: #B0B0B0; // Hover color in dark mode
 }
